--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -5,5 +5,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: registry.cn-hangzhou.aliyuncs.com/wdongyu/builder-manager
-  newTag: "1.1"
+  newName: registry.cn-hangzhou.aliyuncs.com/wdongyu/update-demo
+  newTag: typhoon-debugv2.1
